fixing z-index on footnotes

--- a/pubs/web/css/_layout.scss
+++ b/pubs/web/css/_layout.scss
@@ -203,7 +203,7 @@ article img.cover {
 	}
 }
 
-.littlefoot__popover.is-active.is-above {
+.littlefoot__popover {
 	z-index: 200;
 }
 
